force-app/main/default/objects/Change_Request__c/Change_Request__c.object-meta.xml
<CustomObject>
    <description>To capture details of amendment related to Opportunity/Order/Invoice.</description>
    <label>Amendment</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>