force-app/main/default/objects/Change_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Salesforce record id</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Amendments (Account)</relationshipLabel>
    <relationshipName>Change_Rquests</relationshipName>
    <type>Lookup</type>
</CustomField>