force-app/main/default/objects/Change_Request__c/fields/Actioned_By__c.field-meta.xml
<CustomField>
    <fullName>Actioned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Track and view the user detail in IOM who actioned on the amendment request in IOM</description>
    <label>Actioned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>