force-app/main/default/objects/Change_Request__c/fields/Actioned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actioned_Date_Time__c</fullName>
    <description>Track and view the Date Time in IOM when the amendment request is actioned in IOM</description>
    <label>Actioned Date Time</label>
    <type>DateTime</type>
</CustomField>