force-app/main/default/objects/Change_Request__c/fields/Amended_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Amended_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of amended opportunity.</description>
    <label>Amended Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>