force-app/main/default/objects/Change_Request__c/fields/Amended_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Amended_Quote_Id__c</fullName>
    <description>Amended Quote Id</description>
    <label>Amended Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>