force-app/main/default/objects/Change_Request__c/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <description>Currently Selected Booth Number.</description>
    <label>Current Booth Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>