force-app/main/default/objects/Change_Request__c/fields/Booth_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Booth_Rate_Change__c</fullName>
    <description>New Booth Rate.</description>
    <label>New Booth Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>