force-app/main/default/objects/Change_Request__c/fields/Cancel_Date_Digital__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date_Digital__c</fullName>
    <description>Date of Cancellation for Digital product.</description>
    <label>Cancel Digital Date</label>
    <type>Date</type>
</CustomField>