force-app/main/default/objects/Change_Request__c/fields/Cancel_Date_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date_Publishing__c</fullName>
    <description>Date of Cancellation for Publishing product.</description>
    <label>Cancel Publishing Date</label>
    <type>Date</type>
</CustomField>