force-app/main/default/objects/Change_Request__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Contract for Amendment Request</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>