force-app/main/default/objects/Change_Request__c/fields/CRM_Change_Request_No__c.field-meta.xml
<CustomField>
    <fullName>CRM_Change_Request_No__c</fullName>
    <description>CRM Change Request No</description>
    <label>CRM Change Request No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>