force-app/main/default/objects/Change_Request__c/fields/Current_Digital_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Digital_Product__c</fullName>
    <description>Lookup of Current Digital Product.</description>
    <label>Current Digital Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>