force-app/main/default/objects/Change_Request__c/fields/Current_Processing_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Processing_Step__c</fullName>
    <defaultValue>&quot;Step 0&quot;</defaultValue>
    <description>Shows the current processing amendment Step, where 0 is default and Step 1 means for new Amentmnt Opportunity or Invoice canceled &amp; Step 2 refers to Order Re-Queue according to the type of change</description>
    <label>Current Processing Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step 0</fullName>
                <default>true</default>
                <label>Step 0</label>
            </value>
            <value>
                <fullName>Step 1</fullName>
            </value>
            <value>
                <fullName>Step 2</fullName>
            </value>
            <value>
                <fullName>Step 3</fullName>
            </value>
            <value>
                <fullName>Step 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>