force-app/main/default/objects/Change_Request__c/fields/Current_Publishing_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Publishing_Product__c</fullName>
    <description>Lookup of Current Publishing Product.</description>
    <label>Current Publishing Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>