force-app/main/default/objects/Change_Request__c/fields/Current_Publishing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Publishing_Rate__c</fullName>
    <description>Current Rate of  Publishing Product.</description>
    <label>Current Publishing Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>