force-app/main/default/objects/Change_Request__c/fields/Current_Sponsorship_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Current_Sponsorship_Date_Range__c</fullName>
    <description>Current Date Range of Sponsorship Product.</description>
    <inlineHelpText>Type in the Start Date and End Date</inlineHelpText>
    <label>Current Sponsorship Date Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>