force-app/main/default/objects/Change_Request__c/fields/Current_Sponsorship_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Current_Sponsorship_Quantity__c</fullName>
    <description>Current Quantity of Sponsorship Product.</description>
    <label>Current Sponsorship Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>