force-app/main/default/objects/Change_Request__c/fields/Customer_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_VAT_Number__c</fullName>
    <description>This field is used to fetch new customer VAT number</description>
    <inlineHelpText>This field is used to fetch new customer VAT number</inlineHelpText>
    <label>Customer VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>