force-app/main/default/objects/Change_Request__c/fields/Data_Synced__c.field-meta.xml
<CustomField>
    <fullName>Data_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if amendment data Synced with CRM &amp; Order Hub</description>
    <inlineHelpText>Checked if amendment data Sync with CRM &amp; Order Hub initiated</inlineHelpText>
    <label>Data Synced</label>
    <type>Checkbox</type>
</CustomField>