force-app/main/default/objects/Change_Request__c/fields/Decrease__c.field-meta.xml
<CustomField>
    <fullName>Decrease__c</fullName>
    <description>New updated dimensions of booth. Field is Obsolete now.</description>
    <label>New Booth Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>