force-app/main/default/objects/Change_Request__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Amendment&apos;s Edition.</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Amendments</relationshipLabel>
    <relationshipName>Change_Rquests</relationshipName>
    <type>Lookup</type>
</CustomField>