force-app/main/default/objects/Change_Request__c/fields/ERP_Ref_Numbers__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ref_Numbers__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <description>ERP Reference Numbers of Invoices &amp; Credit Notes which will be reprinted in case of RICD</description>
    <inlineHelpText>ERP Reference Numbers of Invoice &amp; Credit Notes which will be reprinted in case of RICD</inlineHelpText>
    <label>ERP Ref Numbers</label>
    <type>TextArea</type>
</CustomField>