force-app/main/default/objects/Change_Request__c/fields/IM_Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>IM_Opportunity_No__c</fullName>
    <description>IM Opportunity No</description>
    <formula>Opportunity__r.IM_Opportunity_No__c</formula>
    <label>IM Opportunity No</label>
    <type>Text</type>
</CustomField>