force-app/main/default/objects/Change_Request__c/fields/Increase__c.field-meta.xml
<CustomField>
    <fullName>Increase__c</fullName>
    <description>New updated booth number of booth. Field is Obsolete now.</description>
    <label>New Booth Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>