force-app/main/default/objects/Change_Request__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice</description>
    <inlineHelpText>Invoice</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipName>Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>