force-app/main/default/objects/Change_Request__c/fields/Invoice_To_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Cancel__c</fullName>
    <description>SF Ids of Invoices which are selected to be canceled</description>
    <label>Invoice To Cancel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>