force-app/main/default/objects/Change_Request__c/fields/Legacy_CRM_Instance__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Instance__c</fullName>
    <description>Consist Source Org name from where the data originated (Source CRM)</description>
    <label>Legacy CRM Instance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legacy_CRM_Instance</valueSetName>
    </valueSet>
</CustomField>