force-app/main/default/objects/Change_Request__c/fields/New_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to fetch new account name and save into this object as per ticket no. GGCW-3467.</description>
    <inlineHelpText>This field is used to fetch new account name and save into this object.</inlineHelpText>
    <label>ZZ_New Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Amendments (New Account Name)</relationshipLabel>
    <relationshipName>Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>