force-app/main/default/objects/Change_Request__c/fields/New_Account_NameD__c.field-meta.xml
<CustomField>
    <fullName>New_Account_NameD__c</fullName>
    <label>New Account Name</label>
    <type>TextArea</type>
</CustomField>