force-app/main/default/objects/Change_Request__c/fields/New_Account_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Tax_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Account Tax Number  To updated</description>
    <label>New  Account Tax Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Tax_Number__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Tax_Number__c</referenceTo>
    <relationshipName>Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>