force-app/main/default/objects/Change_Request__c/fields/New_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to fetch new billing contact and save into this object as per ticket no. GGCW-3473.</description>
    <inlineHelpText>This field is used to fetch new billing contact and save into this object.</inlineHelpText>
    <label>New Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>