force-app/main/default/objects/Change_Request__c/fields/New_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Country__c</fullName>
    <description>New Billing Country</description>
    <label>New Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>