force-app/main/default/objects/Change_Request__c/fields/New_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Postal_Code__c</fullName>
    <description>This field is used to fetch new billing postal code and save into this object as per ticket no. GGCW-3473.</description>
    <inlineHelpText>This field is used to fetch new billing postal code and save into this object.</inlineHelpText>
    <label>New Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>