force-app/main/default/objects/Change_Request__c/fields/New_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_State__c</fullName>
    <description>This field is used to fetch new billing state and save into this object as per ticket no. GGCW-3473.</description>
    <inlineHelpText>This field is used to fetch new billing state and save into this object.</inlineHelpText>
    <label>New Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>