force-app/main/default/objects/Change_Request__c/fields/New_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Street__c</fullName>
    <description>This field is used to fetch new billing street and save into this object as per ticket no. GGCW-3473.</description>
    <inlineHelpText>This field is used to fetch new billing street and save into this object.</inlineHelpText>
    <label>New Billing Street</label>
    <type>TextArea</type>
</CustomField>