force-app/main/default/objects/Change_Request__c/fields/New_Booth_Total__c.field-meta.xml
<CustomField>
    <fullName>New_Booth_Total__c</fullName>
    <description>New Booth Total Cost</description>
    <label>New Booth Total Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>