force-app/main/default/objects/Change_Request__c/fields/New_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Email__c</fullName>
    <label>New Contact Email</label>
    <type>Email</type>
</CustomField>