force-app/main/default/objects/Change_Request__c/fields/New_Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_FirstName__c</fullName>
    <label>New Contact FirstName</label>
    <type>TextArea</type>
</CustomField>