force-app/main/default/objects/Change_Request__c/fields/New_Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_LastName__c</fullName>
    <label>New Contact LastName</label>
    <type>TextArea</type>
</CustomField>