force-app/main/default/objects/Change_Request__c/fields/New_Content__c.field-meta.xml
<CustomField>
    <fullName>New_Content__c</fullName>
    <description>New Content</description>
    <label>New Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>