force-app/main/default/objects/Change_Request__c/fields/New_Date_Digital__c.field-meta.xml
<CustomField>
    <fullName>New_Date_Digital__c</fullName>
    <description>New Digital Date</description>
    <label>New Digital Date</label>
    <type>Date</type>
</CustomField>