force-app/main/default/objects/Change_Request__c/fields/New_Date_Publishing__c.field-meta.xml
<CustomField>
    <fullName>New_Date_Publishing__c</fullName>
    <description>New Publishing Date</description>
    <label>New Publishing Date</label>
    <type>Date</type>
</CustomField>