force-app/main/default/objects/Change_Request__c/fields/New_Digital_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Digital_Product__c</fullName>
    <description>New Digital Product</description>
    <label>New Digital Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>