force-app/main/default/objects/Change_Request__c/fields/New_Event_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Event_Product_Type__c</fullName>
    <description>New Event Product Type</description>
    <inlineHelpText>New Event Product Type</inlineHelpText>
    <label>New Event Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booth</fullName>
            </value>
            <value>
                <fullName>Booth Cancellation</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Merchandize</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Commissions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>