force-app/main/default/objects/Change_Request__c/fields/New_Order__c.field-meta.xml
<CustomField>
    <fullName>New_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be having new order lookup data</description>
    <label>Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Order.OpportunityId</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipName>Amendments1</relationshipName>
    <type>Lookup</type>
</CustomField>