force-app/main/default/objects/Change_Request__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to fetch new owner and save into this object as per ticket no. GGCW-3467.</description>
    <inlineHelpText>This field is used to fetch new owner and save into this object.</inlineHelpText>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>