force-app/main/default/objects/Change_Request__c/fields/New_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Schedule__c</fullName>
    <description>This picklist contains values of all payment schedules available on Opportunity.</description>
    <label>New Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Schedule</valueSetName>
    </valueSet>
</CustomField>