force-app/main/default/objects/Change_Request__c/fields/New_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Terms__c</fullName>
    <description>This field is used to fetch new payment term and save into this object as per ticket no. GGCW-3467.</description>
    <inlineHelpText>This field is used to fetch new payment term and save into this object.</inlineHelpText>
    <label>New Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>