force-app/main/default/objects/Change_Request__c/fields/New_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>New_PO_Number__c</fullName>
    <label>New PO Number</label>
    <type>TextArea</type>
</CustomField>