force-app/main/default/objects/Change_Request__c/fields/New_Publishing_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Publishing_Product__c</fullName>
    <description>New Publishing Product</description>
    <label>New Publishing Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>