force-app/main/default/objects/Change_Request__c/fields/New_Publishing_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Publishing_Rate__c</fullName>
    <description>New Publishing Rate</description>
    <label>New Publishing Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>