force-app/main/default/objects/Change_Request__c/fields/New_Rate_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Sponsorship__c</fullName>
    <description>IOM	New Sponsorship Rate</description>
    <label>New Sponsorship Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>