force-app/main/default/objects/Change_Request__c/fields/New_Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Amendments (New Shipping Account)</relationshipLabel>
    <relationshipName>Amendments2</relationshipName>
    <type>Lookup</type>
</CustomField>