force-app/main/default/objects/Change_Request__c/fields/New_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_City__c</fullName>
    <label>New Shipping City</label>
    <type>TextArea</type>
</CustomField>