force-app/main/default/objects/Change_Request__c/fields/New_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_Country__c</fullName>
    <label>New Shipping Country</label>
    <type>TextArea</type>
</CustomField>