force-app/main/default/objects/Change_Request__c/fields/New_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_Postal_Code__c</fullName>
    <label>New Shipping Postal Code</label>
    <type>TextArea</type>
</CustomField>