force-app/main/default/objects/Change_Request__c/fields/New_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_State__c</fullName>
    <label>New Shipping State</label>
    <type>TextArea</type>
</CustomField>