force-app/main/default/objects/Change_Request__c/fields/New_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_Street__c</fullName>
    <label>New Shipping Street</label>
    <type>TextArea</type>
</CustomField>