force-app/main/default/objects/Change_Request__c/fields/New_Size_Publishing__c.field-meta.xml
<CustomField>
    <fullName>New_Size_Publishing__c</fullName>
    <description>New Publishing Size</description>
    <label>New Publishing Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>