force-app/main/default/objects/Change_Request__c/fields/New_Sponsorship_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>New_Sponsorship_Date_Range__c</fullName>
    <description>New Sponsorship Date Range</description>
    <inlineHelpText>Type in the Start and End Date</inlineHelpText>
    <label>New Sponsorship Date Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>