force-app/main/default/objects/Change_Request__c/fields/New_Sponsorship_Quantity__c.field-meta.xml
<CustomField>
    <fullName>New_Sponsorship_Quantity__c</fullName>
    <description>New Sponsorship Quantity</description>
    <label>New Sponsorship Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>