force-app/main/default/objects/Change_Request__c/fields/New_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Tax_ID__c</fullName>
    <label>New Tax ID</label>
    <type>TextArea</type>
</CustomField>