force-app/main/default/objects/Change_Request__c/fields/New_Total_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>New_Total_Sponsorship__c</fullName>
    <description>IOM	New Sponsorship Total Cost</description>
    <label>New Sponsorship Total Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>