force-app/main/default/objects/Change_Request__c/fields/New_Type_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>New_Type_Sponsorship__c</fullName>
    <description>IOM	New Sponsorship Product</description>
    <label>New Sponsorship Product</label>
    <type>TextArea</type>
</CustomField>