force-app/main/default/objects/Change_Request__c/fields/Old_Account_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Tax_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Old Account Tax Number</description>
    <inlineHelpText>Old Account Tax Number</inlineHelpText>
    <label>Old Account Tax Number</label>
    <referenceTo>Account_Tax_Number__c</referenceTo>
    <relationshipName>Amendments1</relationshipName>
    <type>Lookup</type>
</CustomField>