force-app/main/default/objects/Change_Request__c/fields/Old_Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Old Bill To Contact</description>
    <inlineHelpText>Old Bill To Contact</inlineHelpText>
    <label>Old Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>