force-app/main/default/objects/Change_Request__c/fields/Old_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Amendments (Old Billing Account)</relationshipLabel>
    <relationshipName>Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>