force-app/main/default/objects/Change_Request__c/fields/Old_Billing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Address_Line_2__c</fullName>
    <label>Old Billing Address Line 2</label>
    <type>TextArea</type>
</CustomField>