force-app/main/default/objects/Change_Request__c/fields/Old_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_City__c</fullName>
    <description>Old Billing City</description>
    <label>Old Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>