force-app/main/default/objects/Change_Request__c/fields/Old_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Country__c</fullName>
    <description>Old Billing Country</description>
    <label>Old Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>