force-app/main/default/objects/Change_Request__c/fields/Old_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Postal_Code__c</fullName>
    <description>Old Billing Postal Code</description>
    <label>Old Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>