force-app/main/default/objects/Change_Request__c/fields/Old_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_State__c</fullName>
    <description>Old Billing State</description>
    <label>Old Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>